tweak styling and fix favicon on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,7 +46,7 @@ a:hover {
 }
 
 .padded-content {
-    max-width: 800px;
+    max-width: 760px;
     padding: 4vh 10vw 10vh;
 }
 
